Marika dev (#12)
* dont reutnr liusts in dto mapper